# pico_chess

./: CMakeLists.txt  README.md  bishop.C  board.C  board.h  chess.h  common.h  engine.C  engine.h  eval_move.C  king.C  knight.C  main.C  move.C  move.h  moves_tree.C  moves_tree.h  moves_tree_minimax.C  pawn.C  pico_chess.C  pico_chess.h  pico_stream_player.C  pieces.h  queen.C  rook.C  setup_for_build.sh
include/: CMakeLists.txt  board.h  chess.h  common.h  engine.h  pieces.h
src/: CMakeLists.txt  board.C  engine.C  king.C  knight.C  main.C  moves_tree.C  pawn.C  pico_stream_player.C  pieces.C  queen.C  rook.C
